--- a/apps/v4/content/docs/registry/namespace.mdx
+++ b/apps/v4/content/docs/registry/namespace.mdx
@@ -1,12 +1,7 @@
 ---
-title: Namespaced Registries
+title: Namespaces
 description: Configure and use multiple resource registries with namespace support.
 ---
-
-<Callout>
-  **For beta testers:** The namespace system is currently in beta. Use `npx
-  shadcn@beta` for testing.
-</Callout>
 
 Namespaced registries let you configure multiple resource sources in one project. This means you can install components, libraries, utilities, AI prompts, configuration files, and other resources from various registries, whether they're public, third-party, or your own custom private libraries.
 
