docs: add more troubleshooting docs

--- a/apps/v4/content/docs/(root)/mcp.mdx
+++ b/apps/v4/content/docs/(root)/mcp.mdx
@@ -257,6 +257,14 @@ If components fail to install:
 3. **Check Permissions** - Ensure write permissions for component directories
 4. **Review Dependencies** - Check that required dependencies are installed
 
+### No Tools or Prompts
+
+If you see the `No tools or prompts` message, try the following:
+
+1. **Clear the npx cache** - Run `npx clear-npx-cache`
+2. **Re-enable the MCP server** - Try to re-enable the MCP server in your MCP client
+3. **Check Logs** - In Cursor, you can see the logs under View -> Output and select `MCP: project-*` in the dropdown.
+
 ---
 
 ## Learn More
