--- a/apps/v4/content/docs/(root)/mcp.mdx
+++ b/apps/v4/content/docs/(root)/mcp.mdx
@@ -32,7 +32,7 @@ Select your MCP client and follow the instructions to configure the shadcn MCP s
   <TabsContent value="claude" className="mt-4">
     **Run the following command** in your project:
        ```bash
-       npx shadcn@latest mcp init --client claude
+       npx shadcn@beta mcp init --client claude
        ```
 
     **Restart Claude Code** and try the following prompts:
@@ -47,7 +47,7 @@ Select your MCP client and follow the instructions to configure the shadcn MCP s
   <TabsContent value="cursor" className="mt-4">
     **Run the following command** in your project:
        ```bash
-       npx shadcn@latest mcp init --client cursor
+       npx shadcn@beta mcp init --client cursor
        ```
 
     Open **Cursor Settings** and **Enable the MCP server** for shadcn. Then try the following prompts:
@@ -60,7 +60,7 @@ Select your MCP client and follow the instructions to configure the shadcn MCP s
   <TabsContent value="vscode" className="mt-4">
     **Run the following command** in your project:
        ```bash
-       npx shadcn@latest mcp init --client vscode
+       npx shadcn@beta mcp init --client vscode
        ```
 
     Open `.vscode/mcp.json` and click **Start** next to the shadcn server. Then try the following prompts with GitHub Copilot:
@@ -82,6 +82,8 @@ Select your MCP client and follow the instructions to configure the shadcn MCP s
 - **Install with Natural Language** - Add components using simple conversational prompts like "add a login form"
 - **Support for Multiple Registries** - Access public registries, private company libraries, and third-party sources
 
+---
+
 ## How It Works
 
 The MCP server acts as a bridge between your AI assistant, component registries and the shadcn CLI.
@@ -91,20 +93,22 @@ The MCP server acts as a bridge between your AI assistant, component registries 
 3. **AI Processing** - The assistant translates your request into registry commands
 4. **Component Delivery** - Resources are fetched and installed in your project
 
-### Supported Registries
+---
+
+## Supported Registries
 
 The shadcn MCP server works out of the box with any shadcn-compatible registry.
 
 - **shadcn/ui Registry** - The default registry with all shadcn/ui components
-- **Private Registries** - Your company's internal component libraries
 - **Third-Party Registries** - Any registry following the shadcn registry specification
+- **Private Registries** - Your company's internal component libraries
 - **Namespaced Registries** - Multiple registries configured with `@namespace` syntax
 
 ---
 
 ## Configuration
 
-The shadcn MCP server works with any MCP client. Here are the instructions for the most popular ones.
+You can use any MCP client to interact with the shadcn MCP server. Here are the instructions for the most popular ones.
 
 ### Claude Code
 
@@ -171,10 +175,6 @@ See the [VS Code MCP documentation](https://code.visualstudio.com/docs/copilot/c
 
 The MCP server supports multiple registries through your project's `components.json` configuration. This allows you to access components from various sources including private registries and third-party providers.
 
-<Callout>
-  **Note:** No configuration is needed to access standard shadcn/ui registry.
-</Callout>
-
 Configure additional registries in your `components.json`:
 
 ```json title="components.json" showLineNumbers
@@ -191,9 +191,14 @@ Configure additional registries in your `components.json`:
 }
 ```
 
+<Callout>
+  **Note:** No configuration is needed to access the standard shadcn/ui
+  registry.
+</Callout>
+
 ---
 
-### Authentication
+## Authentication
 
 For private registries requiring authentication, set environment variables in your `.env.local`:
 
@@ -202,29 +207,30 @@ REGISTRY_TOKEN=your_token_here
 API_KEY=your_api_key_here
 ```
 
-For more details on registry configuration, see the [Namespaces documentation](/docs/registry/namespace).
+For more details on registry authentication, see the [Authentication documentation](/docs/registry/authentication).
 
 ---
 
 ## Example Prompts
 
-Once MCP is configured, you can use natural language to interact with registries:
+Once the MCP server is configured, you can use natural language to interact with registries. Try one of the following prompts:
 
 ### Browse & Search
 
-- "Show me all available components in the shadcn registry"
-- "Find me a login form from the shadcn registry"
+- Show me all available components in the shadcn registry
+- Find me a login form from the shadcn registry
 
-### Install Components
+### Install Items
 
-- "Add the button component to my project"
-- "Create a login form using shadcn components"
+- Add the button component to my project
+- Create a login form using shadcn components
+- Install the Cursor rules from the acme registry
 
 ### Work with Namespaces
 
-- "Show me components from @acme registry"
-- "Install @internal/auth-form"
-- "Build me a landing page using hero, features and testimonials components from the @acme registry"
+- Show me components from acme registry
+- Install @internal/auth-form
+- Build me a landing page using hero, features and testimonials sections from the acme registry
 
 ---
 
