--- a/apps/v4/content/docs/registry/mcp.mdx
+++ b/apps/v4/content/docs/registry/mcp.mdx
@@ -5,7 +5,15 @@ description: MCP support for registry developers
 
 The [shadcn MCP server](/docs/mcp) works out of the box with any shadcn-compatible registry. You do not need to do anything special to enable MCP support for your registry.
 
-See the [MCP documentation](/docs/mcp) for more information on how to use the shadcn MCP server.
+---
+
+## Prerequisites
+
+The MCP server works by requesting your registry index. Make sure you have a registry item file at the root of your registry named `registry`.
+
+For example, if your registry is hosted at `https://acme.com/r/[name].json`, you should have a file at `https://acme.com/r/registry.json` or `https://acme.com/r/registry` if you're using a JSON file extension.
+
+This file must be a valid JSON file that conforms to the [registry schema](/docs/registry/registry-json).
 
 ---
 
@@ -33,13 +41,12 @@ Ask your registry consumers to configure your registry in their `components.json
     **Run the following command** in your project:
 
     ```bash
-    npx shadcn@latest mcp init --client claude
+    npx shadcn@beta mcp init --client claude
     ```
 
     **Restart Claude Code** and try the following prompts:
-       - Show me all available components in the shadcn registry
-       - Add the button, dialog and card components to my project
-       - Create a contact form using components from the shadcn registry
+       - Show me the components in the acme registry
+       - Create a landing page using items from the acme registry
 
     **Note:** You can use `/mcp` command in Claude Code to debug the MCP server.
 
@@ -57,13 +64,12 @@ Ask your registry consumers to configure your registry in their `components.json
     ```
     **Run the following command** in your project:
        ```bash
-       npx shadcn@latest mcp init --client cursor
+       npx shadcn@beta mcp init --client cursor
        ```
 
     Open **Cursor Settings** and **Enable the MCP server** for shadcn. Then try the following prompts:
-       - Show me all available components in the shadcn registry
-       - Add the button, dialog and card components to my project
-       - Create a contact form using components from the shadcn registry
+       - Show me the components in the acme registry
+       - Create a landing page using items from the acme registry
 
   </TabsContent>
 
@@ -79,20 +85,21 @@ Ask your registry consumers to configure your registry in their `components.json
     ```
     **Run the following command** in your project:
        ```bash
-       npx shadcn@latest mcp init --client vscode
+       npx shadcn@beta mcp init --client vscode
        ```
 
     Open `.vscode/mcp.json` and click **Start** next to the shadcn server. Then try the following prompts with GitHub Copilot:
-       - Show me all available components in the shadcn registry
-       - Add the button, dialog and card components to my project
-       - Create a contact form using components from the shadcn registry
+       - Show me the components in the acme registry
+       - Create a landing page using items from the acme registry
 
   </TabsContent>
 </Tabs>
 
+You can read more about the MCP server in the [MCP documentation](/docs/mcp).
+
 ---
 
-### Best Practices
+## Best Practices
 
 Here are some best practices for MCP-compatible registries:
 
